Update blog index and RAG links

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     hooks:
       - id: update-sitemap
         name: Update sitemap
-        entry: python generate_sitemap.py
+        entry: uv run python generate_sitemap.py
         language: system
         files: '\.md$'
         pass_filenames: false
