--- a/sitemap.yaml
+++ b/sitemap.yaml
@@ -1158,6 +1158,18 @@ writing/posts/strings.md:
     of structured message arrays for flexibility, avoiding restrictive abstractions,
     and enabling immediate integration of API updates. Important keywords are LLM,
     prompt engineering, API, string formatting, and Python.
+writing/posts/sunsetting-567-labs.md:
+  hash: 79fb4a2f60135b115f4c2c86cf9c9eb0
+  summary: '567 Labs is officially sunsetting its courses as of February 2, 2026,
+    and open sourcing all written course content as edited ebook transcripts. Key
+    topics include the RAG (Retrieval-Augmented Generation) playbook emphasizing a
+    product mindset, synthetic evaluation data, effective feedback UX, and specialized
+    retrieval methods. The consulting archive highlights strategies like the content-to-calls
+    flywheel, the value equation formula, multi-option pricing, and structured discovery
+    processes. This open source release offers comprehensive, systematic insights
+    into improving RAG systems and consulting best practices. Keywords: 567 Labs,
+    RAG, open source, course transcripts, ebook, consulting strategies, product mindset,
+    synthetic evaluation, feedback UX, retrieval methods.'
 writing/posts/systematically-improving-rag-raindrop.md:
   hash: 6b100ba7476ea862c8dae90a6b475a01
   summary: 'This article explores systematic approaches to improving Retrieval-Augmented
